catalog/kustomize/tun-device-plugin/security/networkpolicy.tun-device-plugin.yaml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: tailscale-tun-device-plugin
  annotations:
    networkpolicy.kubernetes.io/description: >-
      Restricts all network traffic for the tun-device-plugin pods by denying all incoming and outgoing connections.
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: tun-device-plugin
      app.kubernetes.io/instance: device-manager
  policyTypes:
    - Ingress
    - Egress
  ingress: []
  egress: []
